--- a/Resources/App.resx
+++ b/Resources/App.resx
@@ -141,8 +141,20 @@
     <value>INSTRUCTIONS</value>
     <comment/>
   </data>
-  <data name="TVP_Instruction_Steps" xml:space="preserve">
-    <value>Please Please PLease</value>
+  <data name="TVP_Instruction_Steps_P1" xml:space="preserve">
+    <value>Please read carefully and complete all steps in order to ensure that you supervisor is informed that you have watched this video in its entirety.</value>
+    <comment/>
+  </data>
+  <data name="TVP_Instruction_Steps_UL1" xml:space="preserve">
+    <value>Play the video and watch it all the way through, paying close attention as you  will be tested on the material in the video.</value>
+    <comment/>
+  </data>
+  <data name="TVP_Instruction_Steps_UL2" xml:space="preserve">
+    <value>After watching the video all the way to the end. The button below that says 'Go To Test' will becaome clickable. Click on it to begin the test.</value>
+    <comment/>
+  </data>
+  <data name="TVP_Test_Button" xml:space="preserve">
+    <value>Go To Test</value>
     <comment/>
   </data>
 </root>
